Crisis Event 3, debugging, and fixes

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -76,7 +76,14 @@
  br_venice_events.11.t: "The Replica's Shame"
  br_venice_events.11.d: "Our use of a cheap replica has been catastrophically exposed. The Sons of the Shore have produced the true statue, parading it through the streets of Atlanteum as a triumphant symbol of our deceit."
  br_venice_events.11.f: "From the personal log of Sergeant Valerio of the Colonial Garrison \n\n"They've made a mockery of our mockery. The replica's head is mounted on a post outside the customs house. A beggar's bowl is nailed beneath it, filled with a handful of lead tokens painted gold. Fake coins for our fake Patrician. Scrawled on a plank in tar: "SPARE A DUCAT FOR A BROKEN REPUBLIC?" \n\nThe Arsenale's mark is still visible on the inside of the plaster neck. My men see it. The merchants see it. There's no order I can give that will scrape this shame off our boots."
- br_venice_events.11.a: A devastating blow to our prestige.
+ br_venice_events.11.a: "A devastating blow to our prestige."
+
+ br_venice_events.12.t: "The Boycott of Nóva Veneto"
+ br_venice_events.12.d: "The news is grim. The port of Nóva Veneto, one of our key Atlantican harbors, has formally closed its gates to our vessels, declaring our rule unjust and intolerable."
+ br_venice_events.12.f: "The harbor of Nóva Veneto holds a silence it has not known for two hundred years. Our merchant cogs and naval brigantines sit idle, their sails furled, their hulls heavy with cargo that cannot be unloaded. The docks, usually a chaos of shouting stevedores and creaking cranes, are occupied by a quiet, deliberate stillness. The only movement is the slow, mocking arc of a local fisherman's line cast between the great ships of the Serene Republic."
+ br_venice_events.12.a: "A blockade is in order!"
+ br_venice_events.12.b: "They have a right to protest, we'll simply find other ports."
+ br_venice_events.12.c: "We must replace the owners with loyalists!"
 
  # Development Events
  br_venice_events.20.t: "The Venetian Gazetteer"
@@ -141,6 +148,7 @@
  br_modifier_venice_cover_up: "Massacre Painted Over"
  br_modifier_venice_missionary_zeal: "Zealous Missions"
  br_modifier_venice_mass_missionary_campaign: "Mass Missionary Campaign"
+ br_modifier_venice_city_shutdown: "City Shutdown"
  br_modifier_venice_costly_search: "Extensive Searches"
  br_modifier_venice_monument_comission: "Monument Comission"
  br_modifier_venice_unsatisfying_solution: "Unsatisfying Solution"
@@ -148,6 +156,10 @@
  br_modifier_venice_embarrassing_withdraw: "Embarrassing Withdrawal"
  br_modifier_venice_restored_honor: "Restored Honor"
  br_modifier_venice_world_class_artwork: "World Class Monument"
+ br_modifier_venice_blockaded_shores: "Resentful Blockade"
+ br_modifier_venice_blockade: "Blockaded Shores"
+ br_modifier_venice_alternative_ports: "Alternative Ports"
+ br_modifier_replaced_harbormasters: "Replaced Harbormasters"
 
  # Additional Tooltips
  br_venice_corruption_uncover_chance: "May uncover corruption in Atlantica."
