Crisis Event 3 Outcome Event

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -85,6 +85,11 @@
  br_venice_events.12.b: "They have a right to protest, we'll simply find other ports."
  br_venice_events.12.c: "We must replace the owners with loyalists!"
 
+ br_venice_events.13.t: "The Scarred Harbor"
+ br_venice_events.13.d: "The port of Nóva Veneto has officially reopened to Venetian trade, but the boycott has left deep and lasting damage to its commercial spirit."
+ br_venice_events.13.f: "The Harbor Master's ledger tells the whole story. The column for 'Ships Turned Away' is zero, but the one for 'Disputes Requiring Arbitration' has tripled. He has started noting the names of captains who trade here without incident, a list that grows shorter each month.\n\n"It's the new language that's insulting," a Venetian captain grumbled to his first mate on the quay. "Endless clauses and stipulations. What happened to a man's word being his bond?""
+ br_venice_events.13.a: "A predictable, if regrettable, outcome."
+
  # Development Events
  br_venice_events.20.t: "The Venetian Gazetteer"
  br_venice_events.20.d: "The Atlantican Courant has been successfully established, the first major newspaper in our colonies. While currently filled with shipping schedules and commodity prices, its editorial page has begun to gently favor Venetian interests."
@@ -160,6 +165,7 @@
  br_modifier_venice_blockade: "Blockaded Shores"
  br_modifier_venice_alternative_ports: "Alternative Ports"
  br_modifier_replaced_harbormasters: "Replaced Harbormasters"
+ br_modifier_venice_scarred_harbor: "Scarred Harbor"
 
  # Additional Tooltips
  br_venice_corruption_uncover_chance: "May uncover corruption in Atlantica."
