--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -90,6 +90,12 @@
  br_venice_events.13.f: "The Harbor Master's ledger tells the whole story. The column for 'Ships Turned Away' is zero, but the one for 'Disputes Requiring Arbitration' has tripled. He has started noting the names of captains who trade here without incident, a list that grows shorter each month.\n\n"It's the new language that's insulting," a Venetian captain grumbled to his first mate on the quay. "Endless clauses and stipulations. What happened to a man's word being his bond?""
  br_venice_events.13.a: "A predictable, if regrettable, outcome."
 
+ br_venice_events.14.t: "The New Venice Assembly"
+ br_venice_events.14.d: "The Governor of Atlantica has defected. From our own Palace in Atlanteum, he now presides over a "Continental Assembly" of planters, merchants, and militia colonels."
+ br_venice_events.14.f: "They use our furniture, sit in our chairs, and issue proclamations from our own offices. The Governor's seal has been broken in two; one half remains here, the other is used to legitimize their decrees. Though they have yet to declare independence, they govern as if they already have."
+ br_venice_events.14.a: "This is treason. Arrest every man in that room."
+ br_venice_events.14.b: "Dispatch our diplomats. We will negotiate."
+
  # Development Events
  br_venice_events.20.t: "The Venetian Gazetteer"
  br_venice_events.20.d: "The Atlantican Courant has been successfully established, the first major newspaper in our colonies. While currently filled with shipping schedules and commodity prices, its editorial page has begun to gently favor Venetian interests."
@@ -166,6 +172,9 @@
  br_modifier_venice_alternative_ports: "Alternative Ports"
  br_modifier_replaced_harbormasters: "Replaced Harbormasters"
  br_modifier_venice_scarred_harbor: "Scarred Harbor"
+ br_modifier_venice_war: "Decisive Action"
+ br_modifier_venice_diplomatic_solution: "Treason Excused"
+ br_modifier_venice_complex_negotiations: "Complex Negotiations"
 
  # Additional Tooltips
  br_venice_corruption_uncover_chance: "May uncover corruption in Atlantica."
@@ -182,3 +191,4 @@
  br_venice_consolidation_negative_3: "Lose #blue #bold 3#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_negative_5: "Lose #blue #bold 5#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_negative_10: "Lose #blue #bold 10#!#! #white #bold Consolidation Progress#!"
+ br_venice_consolidation_negative_15: "Lose #blue #bold 15#!#! #white #bold Consolidation Progress#!"
