Began Restructing of final crisis event
- Blocked completion of JE during Final Crisis Event
- Opened Potential for each event chain.
TODO:
- Write path 3

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -7,6 +7,7 @@
  br_venice_consolidate_progress_bar_relations: "From Relations with Atlantica"
  br_venice_consolidate_progress_bar_liberty_desire: "From Atlantican Liberty Desire"
  br_venice_consolidate_progress_bar_revolt: "From Atlantica fighting a Civil War"
+ br_venice_consolidate_progress_bar_final_crisis: "From Revolutionary Crisis"
 
  # events for Consolidate the Stato da Màr
  # Crisis Events
@@ -90,11 +91,12 @@
  br_venice_events.13.f: "The Harbor Master's ledger tells the whole story. The column for 'Ships Turned Away' is zero, but the one for 'Disputes Requiring Arbitration' has tripled. He has started noting the names of captains who trade here without incident, a list that grows shorter each month.\n\n"It's the new language that's insulting," a Venetian captain grumbled to his first mate on the quay. "Endless clauses and stipulations. What happened to a man's word being his bond?""
  br_venice_events.13.a: "A predictable, if regrettable, outcome."
 
- br_venice_events.14.t: "The New Venice Assembly"
- br_venice_events.14.d: "The Governor of Atlantica has defected. From our own Palace in Atlanteum, he now presides over a "Continental Assembly" of planters, merchants, and militia colonels."
- br_venice_events.14.f: "They use our furniture, sit in our chairs, and issue proclamations from our own offices. The Governor's seal has been broken in two; one half remains here, the other is used to legitimize their decrees. Though they have yet to declare independence, they govern as if they already have."
- br_venice_events.14.a: "This is treason. Arrest every man in that room."
- br_venice_events.14.b: "Dispatch our diplomats. We will negotiate."
+ br_venice_events.14.t: "The Atlantican Assembly"
+ br_venice_events.14.d: "A group of Amerigan elites has constituted a "Caribbean Assembly" in the Governor's Palace, framing their brazen challenge to authority simply as a body for "streamlined governance"."
+ br_venice_events.14.f: "Those damned fools! This will bring the Council's wrath down on all of us. Their insanity will plunge the colony into chaos!"\n\n"Can't you see? Chaos is the point of all this. I suspect each man in that assembly is perfectly sane."
+ br_venice_events.14.a: "This is an illegal congress. The Governor will dissolve it immediately."
+ br_venice_events.14.b: "We must be cautious. Let us monitor this 'Assembly' closely."
+ br_vencie_events.14.c: "Grant them a formal charter to define, and limit, their powers."
 
  # Development Events
  br_venice_events.20.t: "The Venetian Gazetteer"
@@ -179,6 +181,7 @@
  # Additional Tooltips
  br_venice_corruption_uncover_chance: "May uncover corruption in Atlantica."
  br_venice_chance_of_discovery: "There is a chance our replica will be discovered."
+ br_venice_crisis_event_4: "This option may have future consequences."
 
  # Consolidation Progress Tooltips
  br_venice_consolidation_2: "Gain #blue #bold 2#!#! #white #bold Consolidation Progress#!"
