Halfway Point Crisis Chain 4
- Wrote and implemented first 4 events in the final Crisis Event Chain
- Have last 3 written, will implement when I have time
TODO:
- Reconciliation events, though these can come after I've implemented some more development and flavor events
- Same deal with victory/defeat in war events against Atlantica

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -37,7 +37,7 @@
 
  br_venice_events.5.t: "El Masacre de la Perla"
  br_venice_events.5.d: "Protests turned bloody when our soldiers fired upon a crowd attempting to deface the monument, leaving the symbol of our rule spattered with blood."
- br_venice_events.5.f: "The Suns of the Shore did not back down. A crowd gathered at the monument, first throwing jeers, then rocks. As the situation escalated, a young man scaled the base with a pot of black paint. A nervous soldier, fearing an attack on his officer, fired his musket. \n\nThe single shot sparked a volley into the crowd. The statue now tells a darker story. The pristine pearl is chipped from a stray bullet. The Patrician's fine robes are streaked with black paint and rust-brown stains.
+ br_venice_events.5.f: "The Suns of the Shore did not back down. A crowd gathered at the monument, first throwing jeers, then rocks. As the situation escalated, a young man scaled the base with a pot of black paint. A nervous soldier, fearing an attack on his officer, fired his musket.\n\nThe single shot sparked a volley into the crowd. The statue now tells a darker story. The pristine pearl is chipped from a stray bullet. The Patrician's fine robes are streaked with black paint and rust-brown stains."
  br_venice_events.5.a: "Lock down the city!"
  br_venice_events.5.b: "Clean off the stains and cover it up."
  br_venice_events.5.c: "In times like these we must turn to God."
@@ -92,19 +92,39 @@
  br_venice_events.13.a: "A predictable, if regrettable, outcome."
 
  br_venice_events.14.t: "The Atlantican Assembly"
- br_venice_events.14.d: "A group of Amerigan elites has constituted a "Caribbean Assembly" in the Governor's Palace, framing their brazen challenge to authority simply as a body for "streamlined governance"."
+ br_venice_events.14.d: "A group of Amerigan elites has constituted a "Atlantican Assembly" in the Governor's Palace, framing their brazen challenge to authority simply as a body for "streamlined governance"."
  br_venice_events.14.f: "Those damned fools! This will bring the Council's wrath down on all of us. Their insanity will plunge the colony into chaos!"\n\n"Can't you see? Chaos is the point of all this. I suspect each man in that assembly is perfectly sane."
  br_venice_events.14.a: "This is an illegal congress. The Governor will dissolve it immediately."
  br_venice_events.14.b: "We must be cautious. Let us monitor this 'Assembly' closely."
  br_vencie_events.14.c: "Grant them a formal charter to define, and limit, their powers."
 
+ br_venice_events.15.t: "The Radicalized Underground"
+ br_venice_events.15.d: "The Governor of Atlantica more than refused our class, he publicly resigned, joining the growing underground movement fiercely radicalized against our rule."
+ br_venice_events.15.f: ""Your excellency, the Governor is theirs. In Perla Square, the heart of our colony, he tore his robes of office and declared the Lion a 'rotted flag on a rusted pole'. The Suns of the Shore and the Assembly stood united behind him. Then he raised his fist... the crowd's roar was his declaration. He did not need to say a word.""
+ br_venice_events.15.a: "We will bring our holdings to order, whatever the means."
+ br_venice_events.15.b: "Pull back our garrisons. Let their revolution consume itself."
+ br_venice_events.15.c: "Brand him an outlaw and seize his assets."
+
+ br_venice_events.16.t: "The Fiscal Autonomy Act"
+ br_venice_events.16.d: "Interpreting our caution as weakness, the Atlantican Assembly has brazenly passed a "Fiscal Autonomy Act," unilaterally halving their tribute to the Serene Republic."
+ br_venice_events.16.f: ""To the Most Serene Republic of Venice, Greetings. Enclosed please find the Atlantican Fiscal Autonomy Act, passed for the economic vitality and self-determination of our people. We trust this adjustment to our fiscal responsibilities will be understood as a necessary measure. Respectfully, The Atlantican Assembly.""
+ br_venice_events.16.a: "Tear this insolence to shreds."
+ br_venice_events.16.b: "If they want a contract, they’ll get one, but perhaps not to their liking."
+
+ br_venice_events.18.t: "A Sun Rises in Rebellion"
+ br_venice_events.18.d: "The formerly underground Atlantican independence movement has become a full-blown revolutionary coalition, and is mobilizing militias across the colony."
+ br_venice_events.18.f: "The crate arrived on a merchant's brig, the captain pale and his hands held high in a gesture of terrified innocence. Inside, neatly folded, were the uniforms of a dozen loyal customs officials and officers, each one stained a rust-brown. The golden thread of the Lion of St. Mark had been meticulously ripped from every breast, leaving behind a ragged gash. The crate contained no other message."
+ br_venice_events.18.a: "Treat with the Underground"
+ br_venice_events.18.b: "Crush the serpents in their nest"
+ br_venice_events.18.c: "Strangle the rebellion slowly. They are no real threat."
+
  # Development Events
- br_venice_events.20.t: "The Venetian Gazetteer"
- br_venice_events.20.d: "The Atlantican Courant has been successfully established, the first major newspaper in our colonies. While currently filled with shipping schedules and commodity prices, its editorial page has begun to gently favor Venetian interests."
- br_venice_events.20.f: ""Your Excellencies, for centuries, our galleys have carried the silks of the East and the gold of the West. But I propose a new cargo, one far more potent: the written word. The press is a new kind of ship, a fleet of thought that requires no wood or cannon. It carries not spices, but ideas. And ideas, once landed on the shores of men's minds, can conquer a continent without a single musket being fired. Let our rivals invest in armies. There is no form of warfare that can hope to compete."\n\n --Giovanni Battista Rosso, addressing the Great Council of Venice"
- br_venice_events.20.a: "Provide a generous subsidy from the treasury."
- br_venice_events.20.b: "Purchase the paper and install a government editor."
- br_venice_events.20.c: "Grant the Church a dedicated column for scripture and homilies."
+ br_venice_events.30.t: "The Venetian Gazetteer"
+ br_venice_events.30.d: "The Atlantican Courant has been successfully established, the first major newspaper in our colonies. While currently filled with shipping schedules and commodity prices, its editorial page has begun to gently favor Venetian interests."
+ br_venice_events.30.f: ""Your Excellencies, for centuries, our galleys have carried the silks of the East and the gold of the West. But I propose a new cargo, one far more potent: the written word. The press is a new kind of ship, a fleet of thought that requires no wood or cannon. It carries not spices, but ideas. And ideas, once landed on the shores of men's minds, can conquer a continent without a single musket being fired. Let our rivals invest in armies. There is no form of warfare that can hope to compete."\n\n --Giovanni Battista Rosso, addressing the Great Council of Venice"
+ br_venice_events.30.a: "Provide a generous subsidy from the treasury."
+ br_venice_events.30.b: "Purchase the paper and install a government editor."
+ br_venice_events.30.c: "Grant the Church a dedicated column for scripture and homilies."
  # completion/timeout/failure events
  br_venice_events.99.t: "The Roar Heard Across the Sea"
  br_venice_events.99.d: "The Stato da Màr is secure. Through a masterful blend of reform, diplomacy, and resolve, we have reforged our Atlantican possession into a loyal and prosperous cornerstone of the Republic."
@@ -177,6 +197,15 @@
  br_modifier_venice_war: "Decisive Action"
  br_modifier_venice_diplomatic_solution: "Treason Excused"
  br_modifier_venice_complex_negotiations: "Complex Negotiations"
+ br_modifier_venice_underground: "Denial of Autonomy"
+ br_modifier_venice_pull_out_forces: "Concessions to the Underground"
+ br_modifier_venice_sieze_assets: "Decisive Punishment"
+ br_modifier_venice_subject_payment_major_atl: "Fiscal Autonomy Act"
+ br_modifier_venice_subject_payment_major: "Atlantican Fiscal Autonomy Act"
+ br_modifier_venice_subject_payment_minor_atl: "Dictated Atlantican Autonomy"
+ br_modifier_venice_subject_payment_minor: "Lowered Colonial Payments"
+ br_modifier_venice_lowered_payments: "Lowered Colonial Taxation"
+ 
 
  # Additional Tooltips
  br_venice_corruption_uncover_chance: "May uncover corruption in Atlantica."
