States renamed to new 1.12 names

--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -59,7 +59,7 @@
  STATE_NICARAGUA: "Nicatlnahuac"
  STATE_COSTA_RICA: "Turiraba"
  STATE_PANAMA: "Bannaba"
- STATE_CUBA: "Atlanteum"
+ STATE_WESTERN_CUBA: "Atlanteum"
  STATE_URUGUAY: "Eastrioe"
  STATE_ECUADOR: "Wayakil"
  STATE_SANTO_DOMINGO: "'Ard Alqidiysin"
@@ -74,7 +74,7 @@
  STATE_IONIAN_ISLANDS: "Iónioi Nísoi"
  STATE_ALBANIA: "Illyrikon"
  STATE_BOSNIA: "Bosna"
- STATE_NAVARRA: "Nafarroa"
+ STATE_BASQUE_COUNTRY: "Nafarroa"
  STATE_SOUTHERN_TRANSYLVANIA: "Transilvania"
  STATE_HAWAIIAN_ISLANDS: "Na Moku o Hawaii"
  STATE_NORTHERN_TRANSYLVANIA: "Ardeal"
@@ -82,7 +82,7 @@
  STATE_WALLACHIA: "Tara Romaneasca"
  STATE_GALICIA: "Galiza"
  STATE_ASTURIAS: "Asturies"
- STATE_CASTILE: "Castilla"
+ STATE_OLD_CASTILE: "Castilla"
  STATE_ARAGON: "Aragó"
  STATE_CATALONIA: "Catalunya"
  STATE_BALEARES: "Balears"
@@ -256,11 +256,11 @@
  STATE_MADEIRA: "Al-Idrisi"
  STATE_CANARY_ISLANDS: "Juzur Alkilab"
  STATE_AZORES: "Atlantis Alsughraa"
- STATE_GRANADA: "Gharnatah"
- STATE_ANDALUSIA: "Qurtubah"
- STATE_BADAJOZ: "Badajoz"
+ STATE_UPPER_ANDALUSIA: "Gharnatah"
+ STATE_LOWER_ANDALUSIA: "Qurtubah"
+ STATE_EXTREMADURA: "Badajoz"
  STATE_VALENCIA: "Balansiya"
- STATE_TOLEDO: "Tulaytulah"
+ STATE_NEW_CASTILE: "Tulaytulah"
  STATE_WALLONIA: "Lotharingien"
  STATE_FLANDERS: "Vlaanderen"
  STATE_HOLLAND: "Holland"
