--- a/localization/english/replace/dynamic_state_and_hub_names_l_english.yml
+++ b/localization/english/replace/dynamic_state_and_hub_names_l_english.yml
@@ -607,12 +607,12 @@
  #HUB_NAME_STATE_CATALONIA_wood:0 "Balaguer"
 
  # Navarra
- STATE_NAVARRA_basque: "Nafarroa"
- HUB_NAME_STATE_NAVARRA_city_basque: "Iruña"
- HUB_NAME_STATE_NAVARRA_port_basque: "Bilbo"
- #HUB_NAME_STATE_NAVARRA_mine:0 "Logroño"
- HUB_NAME_STATE_NAVARRA_farm_basque: "Tutera"
- HUB_NAME_STATE_NAVARRA_wood_basque: "Gasteiz"
+ STATE_BASQUE_COUNTRY_basque: "Nafarroa"
+ HUB_NAME_STATE_BASQUE_COUNTRY_city_basque: "Iruña"
+ HUB_NAME_STATE_BASQUE_COUNTRY_port_basque: "Bilbo"
+ #HUB_NAME_STATE_BASQUE_COUNTRY_mine:0 "Logroño"
+ HUB_NAME_STATE_BASQUE_COUNTRY_farm_basque: "Tutera"
+ HUB_NAME_STATE_BASQUE_COUNTRY_wood_basque: "Gasteiz"
  
  ### Ireland and Great Britain
  # Ulster
