fixed STATE_BALEARIC_ISLANDS bug
- renamed STATE_BALEARES to STATE_BALEARIC_ISLANDS

--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -85,7 +85,7 @@
  STATE_OLD_CASTILE: "Castilla"
  STATE_ARAGON: "Aragó"
  STATE_CATALONIA: "Catalunya"
- STATE_BALEARES: "Balears"
+ STATE_BALEARIC_ISLANDS: "Balears"
  STATE_NEW_SOUTH_WALES: "Néa Anatolía"
  STATE_VICTORIA: "Nikaia"
  STATE_TASMANIA: "Asphodelia"
