replaced ref of STATE_GHANA to STATE_GOLD_COAST
- replaced remaining references of STATE_GHANA to STATE_GOLD_COAST

--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -109,7 +109,7 @@
  STATE_HEDJAZ: "Al-hijaz"
  STATE_TUNISIA: "Carthago"
  STATE_GUINEA: "Gine"
- STATE_GHANA: "Gaana"
+ STATE_GOLD_COAST: "Gaana"
  STATE_TOGO: "Togo"
  STATE_DAHOMEY: "Fon"
  STATE_DEIR_EZ_ZOR: "Dayru z-Zawr"
