replaced references of STATE_GAMBIA with STATE_SENEGAL
- replaced remaining ref of STATE_GAMBIA with STATE_SENEGAL

--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -373,7 +373,7 @@
  STATE_IVORY_COAST: "Ivory Coast"
  STATE_WINDWARD_COAST: "Windward Coast"
  STATE_SENEGAL: "Senegal"
- STATE_GAMBIA: "Gambia"
+ STATE_SENEGAL: "Gambia"
  STATE_SIERRA_LEONE: "Sierra Leone"
  STATE_ZULULAND: "Zululand"
  STATE_VRYSTAAT: "Vrystaat"
